Fixing TextField alignment when no helpText.

--- a/src/react-material-easy/TextField.css
+++ b/src/react-material-easy/TextField.css
@@ -4,10 +4,6 @@
  * @see https://github.com/rodrigocfd/react-material-easy
  */
 
-.rme-text-field__wrap {
-	display: inline-block;
-}
-
 .rme-text-field__input {
 	letter-spacing: normal;
 	font-family: inherit;
